[gd_scene load_steps=2 format=3 uid="uid://btlygt0ujlajp"]

[ext_resource type="Script" path="res://game_componenets/detections/detection_area.gd" id="1_0g480"]

[node name="DetectionArea" type="Area2D"]
collision_layer = 0
collision_mask = 4
script = ExtResource("1_0g480")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
